--- a/templates/sections/documents-list.njk
+++ b/templates/sections/documents-list.njk
@@ -1,7 +1,7 @@
 <div class="u-list">
     <div class="flx-row u-list__header">
-        <div class="columns small-12 large-2">Обект договору</div>
-        <div class="columns small-12 large-2">Вид страхування</div>
+        <div class="columns small-12 large-2 is--active is--up">Обект договору</div>
+        <div class="columns small-12 large-2 is--active is--down">Вид страхування</div>
         <div class="columns small-12 large-2">Номер справи</div>
         <div class="columns small-12 large-1 date">Дата початку</div>
         <div class="columns small-12 large-1 date">Дата закінчення</div>
