hint for the input fields

--- a/templates/pages/my-personal-details.html
+++ b/templates/pages/my-personal-details.html
@@ -33,7 +33,10 @@
 
                 <div class="u-fields__separator"><span>Особиста інформація</span></div>
                 <div class="u-fields flx-row">
-                    <label for="surname" class="column small-10 medium-3 u-label xs-text-align-right">Прізвище</label>
+                    <label for="surname" class="column small-10 medium-3 u-label xs-text-align-right">
+                      Прізвище
+                      <span class="label-tooltip" title="Кирилицею, згідно внутрішного паспорта"><i></i></span>
+                    </label>
                     <div class="column small-10 medium-7 large-6">
                         <input type="text" class="u-input" name="surname" id="surname" required>
                     </div>
@@ -47,21 +50,29 @@
                     </div>
                 </div>
                 <div class="u-fields flx-row">
-                    <label for="name" class="column small-10 medium-3 u-label xs-text-align-right">Ім'я</label>
+                    <label for="name" class="column small-10 medium-3 u-label xs-text-align-right">
+                      Ім'я
+                      <span class="label-tooltip" title="Кирилицею, згідно внутрішного паспорта"><i></i></span>
+                    </label>
                     <div class="column small-10 medium-7 large-6">
                         <input type="text" class="u-input" name="name" id="name" required>
                     </div>
                     <div class="column shrink u-field-state"><em class="icon icon-state-def"></em></div>
                 </div>
                 <div class="u-fields flx-row">
-                    <label for="patronymic" class="column small-10 medium-3 u-label xs-text-align-right">По батькові</label>
+                    <label for="patronymic" class="column small-10 medium-3 u-label xs-text-align-right">
+                      По батькові
+                      <span class="label-tooltip" title="Кирилицею, згідно внутрішного паспорта"><i></i></span>
+                    </label>
                     <div class="column small-10 medium-7 large-6">
                         <input type="text" class="u-input ignore" name="patronymic" id="patronymic">
                     </div>
                     <div class="column shrink u-field-state"><em class="icon icon-state-def"></em></div>
                 </div>
                 <div class="u-fields flx-row">
-                    <label for="inn" class="column small-10 medium-3 u-label xs-text-align-right">Інн</label>
+                    <label for="inn" class="column small-10 medium-3 u-label xs-text-align-right">
+                      Інн
+                    </label>
                     <div class="column small-10 medium-7 large-6">
                         <input type="text" class="u-input ignore" name="inn" id="inn">
                     </div>
