--- a/css/old/main.css
+++ b/css/old/main.css
@@ -979,6 +979,10 @@ span.account-type {
 	font-style: normal;
 }
 
+a.account-type + a.account-type {
+	padding: 0
+}
+
 a.account-type:hover,
 a.account-type.selected,
 span.account-type:hover,
@@ -4972,7 +4976,7 @@ h2.ex-h-l {
 		display: block;
 		height: auto;
 		line-height: normal;
-		margin-top: 44px;
+		margin-top: 50px;
 		padding: 0;
 		position: absolute;
 		right: 20px;
