corrections for header

--- a/templates/components/header.njk
+++ b/templates/components/header.njk
@@ -215,7 +215,7 @@
 
 <div class="section top-links">
 <div class="inner-section">
-    <button id="show-mobile-menu" class="mobile-version lines-button x top-gutter-header" type="button" role="button" aria-label="Toggle Navigation">
+    <button id="show-mobile-menu" class="mobile-version lines-button x" type="button" role="button" aria-label="Toggle Navigation">
         <span class="lines"></span>
     </button>
     <div class="web-version top-menu">
@@ -224,11 +224,11 @@
         <span class="clearfix"></span>
     </div>
 
-    <div class="mobile-version">
+    <!--<div class="mobile-version">
         <a href="https://uniqa.ua/ua/private/" class="account-type selected ">Для вас</a>
         <a href="https://uniqa.ua/ua/business/" class="account-type">Для бизнеса</a>
         <span class="clearfix"></span>
-    </div>
+    </div>-->
     <div class="mobile-version top-gutter-header">
       <a href="my-registration-2.html" class="account-action register">Inregistreaza-te<em class="icon icon-user-registration-header abs-icn"></em></a>
       <a href="my-login-2.html" class="account-action login">Logheaza-te<em class="icon icon-user-login-header abs-icn"></em></a>
