--- a/templates/components/header.njk
+++ b/templates/components/header.njk
@@ -230,7 +230,7 @@
         <span class="clearfix"></span>
     </div>-->
     <div class="mobile-version top-gutter-header">
-      <a href="my-registration-2.html" class="account-action register">Inregistreaza-te<em class="icon icon-user-registration-header abs-icn"></em></a>
+      {# <a href="my-registration-2.html" class="account-action register">Inregistreaza-te<em class="icon icon-user-registration-header abs-icn"></em></a> #}
       <a href="my-login-2.html" class="account-action login">Logheaza-te<em class="icon icon-user-login-header abs-icn"></em></a>
       <span class="clearfix"></span>
     </div>
