--- a/css/old/main.css
+++ b/css/old/main.css
@@ -1463,8 +1463,9 @@ header nav ul.right-menu a.first, span.first {
 }
 
 header nav ul li {
-	display: inline-block;
+	display: block;
 	position: relative;
+	float: left;
 }
 
 header nav ul li > a:link,
@@ -6203,10 +6204,11 @@ a.menu_green_button {
 	line-height: 18px !important;
 	height: 50px !important;
 	opacity: 1;
-	padding: 16px 10px 9px !important;
+	padding: 16px 11px 9px !important;
 	text-decoration: none;
 	text-shadow: 0 1px rgba(0, 0, 0, 0.1);
 	margin-left: 5px !important;
+	box-sizing: border-box;
 
 	padding: 0px 10px !important;
 	line-height: 50px !important;
