--- a/css/new/form.css
+++ b/css/new/form.css
@@ -181,7 +181,12 @@
     text-align: right;
     margin: 80px 0;
     align-self: center;
-    overflow: hidden;
+
+    &:after {
+        content: "";
+        display: table;
+        clear: both;
+    }
 
     &.is--stickable {
       margin-top: 30px;
@@ -578,4 +583,51 @@ input[type="radio"].u-radio {
     right: 0;
   }
 
+}
+
+.btn-dropdown-container {
+  position: relative;
+  display: inline-block;
+
+  &.is-open .btn-dropdown {
+    display: block;
+  }
+}
+
+.btn-dropdown  {
+  position: absolute;
+  background: #fff;
+  padding: 15px 15px 10px 15px;
+  box-shadow: 0 2px 5px rgba(0,0,0,.1);
+  text-align: left;
+  width: 200px;
+  top: 40px;
+  right: 0;
+  display: none;
+  z-index: 100;
+
+  & ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+
+  & li {
+    padding: 0;
+    margin: 0;
+  }
+
+  & a.arrow {
+    color: #005ca9;
+    font-size: 1rem;
+    font-weight: 400;
+    font-style: normal;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .btn-dropdown {
+    width: 260px;
+    right: -70px;
+  }
 }
