--- a/templates/sections/documents-list.njk
+++ b/templates/sections/documents-list.njk
@@ -27,5 +27,16 @@
 </div>
 
 <div class="u-submit-row">
-    <button type="submit" class="u-btn primary">Придбати договiр</button>
+    <div class="btn-dropdown-container">
+      <button type="submit" class="u-btn primary toggle-btn-dd">Придбати договiр</button>
+      <div class="btn-dropdown">
+        <ul>
+          <li><a class="arrow blue" href="http://www.uniqa.ua"><i class="size16"></i> Туристичне страхування</a></li>
+          <li><a class="arrow blue" href="http://www.uniqa.ua"><i class="size16"></i> Атоцивілка (ОСАГО)</a></li>
+          <li><a class="arrow blue" href="http://www.uniqa.ua"><i class="size16"></i> Добровільна автоцивілка</a></li>
+          <li><a class="arrow blue" href="http://www.uniqa.ua"><i class="size16"></i> Страхування квартири</a></li>
+          <li><a class="arrow blue" href="http://www.uniqa.ua"><i class="size16"></i> Відповідальність власників житла</a></li>
+        </ul>
+      </div>
+    </div>
 </div>
