--- a/templates/sections/documents-list.njk
+++ b/templates/sections/documents-list.njk
@@ -29,6 +29,7 @@
 <div class="u-submit-row">
     <div class="btn-dropdown-container">
       <button type="submit" class="u-btn primary toggle-btn-dd">Придбати договiр</button>
+      <div class="btn-dropdown-overlay"></div>
       <div class="btn-dropdown">
         <ul>
           <li><a class="arrow blue" href="http://www.uniqa.ua"><i class="size16"></i> Туристичне страхування</a></li>
