--- a/css/new/form.css
+++ b/css/new/form.css
@@ -589,7 +589,8 @@ input[type="radio"].u-radio {
   position: relative;
   display: inline-block;
 
-  &.is-open .btn-dropdown {
+  &.is-open .btn-dropdown,
+  &.is-open .btn-dropdown-overlay {
     display: block;
   }
 
@@ -627,6 +628,16 @@ input[type="radio"].u-radio {
     font-size: 1rem;
     font-weight: 400;
     font-style: normal;
+  }
+
+  &-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    z-index: 99;
+    display: none;
   }
 }
 
