--- a/templates/components/scripts-footer.njk
+++ b/templates/components/scripts-footer.njk
@@ -67,4 +67,8 @@
       dropdownEL.height() >= window.scrollY && container.addClass('to-top');
     });
 
+    $('.btn-dropdown-overlay').on('click', function (e) {
+      $(e.target).closest('.btn-dropdown-container').removeClass('is-open');
+    });
+
 </script>
