--- a/templates/sections/inbox.njk
+++ b/templates/sections/inbox.njk
@@ -14,7 +14,7 @@
     <div class="inbox-list__line is-new">
       <div class="flx-row inbox--open">
           <div class="columns small-8 medium-10"><em class="icon icon-green-bell"></em>Вітання - З новім роком !!!</div>
-          <div class="columns small-4 medium-2 text-align-right">12.12.12</div>
+          <div class="columns small-4 medium-2 text-align-right">12.12.12<br>12:45</div>
       </div>
       <div class="inbox-list__content">
         <div class="text-align-right inbox-list__options">
@@ -30,7 +30,7 @@
     <div class="inbox-list__line">
       <div class="flx-row inbox--open">
           <div class="columns small-8 medium-10"><em class="icon icon-important"></em>Важлива інформація</div>
-          <div class="columns small-4 medium-2 text-align-right">11.07.11</div>
+          <div class="columns small-4 medium-2 text-align-right">11.07.11<br>12:45</div>
       </div>
       <div class="inbox-list__content">
         <div class="text-align-right inbox-list__options">
@@ -46,7 +46,7 @@
     <div class="inbox-list__line is-new">
       <div class="flx-row inbox--open">
           <div class="columns small-8 medium-10"><em class="icon icon-email"></em>Вітання - З новім роком !!!</div>
-          <div class="columns small-4 medium-2 text-align-right">03.12.12</div>
+          <div class="columns small-4 medium-2 text-align-right">03.12.12 <br>12:45</div>
       </div>
       <div class="inbox-list__content">
         <div class="text-align-right inbox-list__options">
@@ -62,7 +62,7 @@
     <div class="inbox-list__line">
       <div class="flx-row inbox--open">
           <div class="columns small-8 medium-10"><em class="icon icon-email"></em>Важлива інформація</div>
-          <div class="columns small-4 medium-2 text-align-right">02.11.16</div>
+          <div class="columns small-4 medium-2 text-align-right">02.11.16<br>12:45</div>
       </div>
       <div class="inbox-list__content">
         <div class="text-align-right inbox-list__options">
@@ -78,7 +78,7 @@
     <div class="inbox-list__line">
       <div class="flx-row inbox--open">
           <div class="columns small-8 medium-10"><em class="icon icon-email"></em>Вітання - З новім роком !!!</div>
-          <div class="columns small-4 medium-2 text-align-right">29.01.16</div>
+          <div class="columns small-4 medium-2 text-align-right">29.01.16<br>12:45</div>
       </div>
       <div class="inbox-list__content">
         <div class="text-align-right inbox-list__options">
