--- a/templates/pages/my-personal-details.html
+++ b/templates/pages/my-personal-details.html
@@ -193,6 +193,19 @@
                     </div>
                     <div class="column shrink u-field-state"><em class="icon icon-state-def"></em></div>
                 </div>
+
+                <div class="u-fields flx-row">
+                      <label class="column small-10 medium-3 u-label xs-text-align-right">
+                          Вариант радиобатона
+                      </label>
+                      <div class="column small-10 medium-7 large-6">
+                          <input type="radio" value="1" name="data-choise" id="data-choise" class="u-radio" checked="">
+                          <label for="data-choise">Вариант 1</label>
+                          <input type="radio" value="2" name="data-choise" id="data-choise-2" class="u-radio">
+                          <label for="data-choise-2">Вариант 2</label>
+                      </div>
+                  </div>
+
                 <div class="u-submit-row">
                     <button type="submit" class="u-btn primary">Зберегти</button>
                 </div>
