--- a/templates/pages/my-registration-2.html
+++ b/templates/pages/my-registration-2.html
@@ -32,8 +32,15 @@
                 <div class="column small-1"><em class="icon icon-state-def"></em></div>
             </div>
             <div class="u-fields flx-row align-middle">
-                <div class="column small-11">
+                <div class="column small-11 has-hint">
                     <input type="password" class="u-input" name="user-password" id="user-password" placeholder="Пароль">
+                    <div class="u-fields-hint">
+                      <ul>
+                        <li>Щонайменше 7 символiв</li>
+                        <li>Повинен мiстити принаймнi одну велику лiтеру</li>
+                        <li>Використовувати цифри та букви</li>
+                      </ul>
+                    </div>
                 </div>
                 <div class="column small-1"><em class="icon icon-state-def"></em></div>
             </div>
