--- a/css/new/form.css
+++ b/css/new/form.css
@@ -47,7 +47,6 @@
 
 }
 
-
 .u-field-state {
     position: relative;
     margin-top: 7px;
@@ -144,6 +143,12 @@
          &:hover {
             background: #767877;
           }
+    }
+
+    &.small-link {
+      font-size: .9rem;
+      padding: 0 5px;
+      font-style: normal;
     }
 
     &.delete {
@@ -311,6 +316,56 @@ input[type="radio"].u-radio {
     line-height: 1.4rem;
     padding-top: 10px;
     resize: none;
+}
+
+.has-hint {
+  position: relative;
+}
+
+.u-fields-hint {
+  width: 90%;
+  box-sizing: border-box;
+  position: absolute;
+  background: #fff;
+  border: 1px solid #ccc;
+  padding: 10px;
+  color: #666;
+  bottom: 60px;
+  border-radius: 4px;
+  display: none;
+  left: 50%;
+  transform: translate(-50%, 0);
+  transition: display 200ms ease-out;
+
+  &:after,
+  &:before {
+    content: '';
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 15px 15px 0 15px;
+    border-color: #ccc transparent transparent transparent;
+    position: absolute;
+    bottom: -15px;
+    left: 50%;
+    margin-left: -15px;
+  }
+
+  &:after {
+    margin-left: -14px;
+    bottom: -14px;
+    border-width: 14px 14px 0 14px;
+    border-color: #fff transparent transparent transparent;
+  }
+
+  & ul {
+    margin: 0;
+    padding: 0 0 0 20px;
+  }
+}
+
+.has-hint .u-input:focus + .u-fields-hint {
+  display: block;
 }
 
 .inputfile {
