--- a/css/split/dashboard.css
+++ b/css/split/dashboard.css
@@ -286,6 +286,23 @@ a.widget-blue-box__lst-item:hover {
   background: rgba(255, 255, 255, .8);
 }
 
+.marketing-add__content-close {
+  position: absolute;
+  right: 10px;
+  top: 2px;
+  font-size: 24px;
+  font-size: 1.5rem;
+  cursor: pointer;
+  transition: -webkit-transform 200ms ease-out;
+  transition: transform 200ms ease-out;
+  transition: transform 200ms ease-out, -webkit-transform 200ms ease-out;
+}
+
+.marketing-add__content-close:hover {
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
+}
+
 .marketing-add__title {
   font-size: 22px;
   margin-bottom: 15px;
@@ -298,6 +315,14 @@ a.widget-blue-box__lst-item:hover {
 
 .marketing-add__action {
   text-align: right;
+}
+
+.marketing-add__action .u-btn {
+  padding: 0 8px;
+}
+
+.marketing-add__action .u-btn + .u-btn {
+  margin-left: 8px;
 }
 
 .pay-online {
