--- a/css/split/form.css
+++ b/css/split/form.css
@@ -47,12 +47,10 @@
     height: auto;
 }
 
-
 .u-field-state {
     position: relative;
     margin-top: 7px;
 }
-
 
 .u-field-state [class *='icon-'] {
     position: absolute;
@@ -145,6 +143,13 @@
 
 .u-btn.secondary:hover {
     background: #767877;
+}
+
+.u-btn.small-link {
+    font-size: 14.4px;
+    font-size: .9rem;
+    padding: 0 5px;
+    font-style: normal;
 }
 
 .u-btn.delete {
@@ -313,6 +318,56 @@ input[type="radio"].u-radio:checked + label:after {
     line-height: 1.4rem;
     padding-top: 10px;
     resize: none;
+}
+
+.has-hint {
+  position: relative;
+}
+
+.u-fields-hint {
+  width: 90%;
+  box-sizing: border-box;
+  position: absolute;
+  background: #fff;
+  border: 1px solid #ccc;
+  padding: 10px;
+  color: #666;
+  bottom: 60px;
+  border-radius: 4px;
+  display: none;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
+  transition: display 200ms ease-out
+}
+
+.u-fields-hint:after, .u-fields-hint:before {
+    content: '';
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 15px 15px 0 15px;
+    border-color: #ccc transparent transparent transparent;
+    position: absolute;
+    bottom: -15px;
+    left: 50%;
+    margin-left: -15px;
+}
+
+.u-fields-hint:after {
+    margin-left: -14px;
+    bottom: -14px;
+    border-width: 14px 14px 0 14px;
+    border-color: #fff transparent transparent transparent;
+}
+
+.u-fields-hint ul {
+    margin: 0;
+    padding: 0 0 0 20px;
+}
+
+.has-hint .u-input:focus + .u-fields-hint {
+  display: block;
 }
 
 .inputfile {
