--- a/css/old/main.css
+++ b/css/old/main.css
@@ -1535,6 +1535,7 @@ header nav ul li:hover .submenu {
 	display: block;
 	position: relative;
 	padding-left: 15px;
+	float: none;
 }
 
 .submenu a:link,
