--- a/css/new/my_uniqa.css
+++ b/css/new/my_uniqa.css
@@ -153,7 +153,7 @@ img {max-width: 100%;}
 .notification-counter {
   position: absolute;
   top: -2px;
-  right: -2px;
+  left: 8px;
   font-size: 9px;
   padding: 0 4px;
   line-height: 12px;
@@ -229,7 +229,6 @@ img {max-width: 100%;}
   background-size: cover;
   min-height: calc(100vh - 82px);
   position: relative;
-  margin: -25px -10px;
 	height: 100%;
 
   &__link:link {
@@ -248,12 +247,12 @@ img {max-width: 100%;}
     border-radius: 18px;
     background-color: #fff;
     width: 550px;
-    padding: 50px 50px 30px;
+    padding: 40px 50px 20px;
     box-sizing: border-box;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -45%);
+    transform: translate(-50%, -46%);
 
     & h1 {
       padding: 0;
@@ -266,11 +265,12 @@ img {max-width: 100%;}
   }
 }
 
-@media screen and (max-height: 600px) {
+@media screen and (max-height: 760px) {
 	.login-deck {
     padding: 50px 30px;
 		background: none;
   }
+
 	.login-deck__modal {
     border-radius: 0;
     position: static;
