--- a/css/split/my_uniqa.css
+++ b/css/split/my_uniqa.css
@@ -138,7 +138,7 @@ img {max-width: 100%;}
 .notification-counter {
   position: absolute;
   top: -2px;
-  right: -2px;
+  left: 8px;
   font-size: 9px;
   padding: 0 4px;
   line-height: 12px;
@@ -216,7 +216,6 @@ img {max-width: 100%;}
   background-size: cover;
   min-height: calc(100vh - 82px);
   position: relative;
-  margin: -25px -10px;
 	height: 100%
 }
 .login-deck__link:link {
@@ -233,13 +232,13 @@ img {max-width: 100%;}
 	border-radius: 18px;
 	background-color: #fff;
 	width: 550px;
-	padding: 50px 50px 30px;
+	padding: 40px 50px 20px;
 	box-sizing: border-box;
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	-webkit-transform: translate(-50%, -45%);
-	        transform: translate(-50%, -45%);
+	-webkit-transform: translate(-50%, -46%);
+	        transform: translate(-50%, -46%);
 }
 .login-deck__modal h1 {
 	padding: 0;
@@ -249,11 +248,12 @@ img {max-width: 100%;}
 	height: 52px;
 }
 
-@media screen and (max-height: 600px) {
+@media screen and (max-height: 760px) {
 	.login-deck {
     padding: 50px 30px;
 		background: none;
   }
+
 	.login-deck__modal {
     border-radius: 0;
     position: static;
