fixes and improvements

--- a/templates/sections/modal-upload.njk
+++ b/templates/sections/modal-upload.njk
@@ -1,34 +1,33 @@
-<div class="modal-bacckdrop modal-upload" style="display: none">
-    <div class="modal">
-        <div class="modal__close modal-close">&times;</div>
-        <div class="modal__header">Надіслати документ</div>
-        <div class="modal__content">
-            <form action="">
-                <div class="u-fields flx-row">
-                    <div class="column small-12">
-                    <input type="file" name="file-7[]" id="file-7" class="inputfile inputfile-6" data-multiple-caption="{count} files selected" multiple="">
-                    <label for="file-7"><span></span> <strong><svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17"><path d="M10 0l-5.2 4.9h3.3v5.1h3.8v-5.1h3.3l-5.2-4.9zm9.3 11.5l-3.2-2.1h-2l3.4 2.6h-3.5c-.1 0-.2.1-.2.1l-.8 2.3h-6l-.8-2.2c-.1-.1-.1-.2-.2-.2h-3.6l3.4-2.6h-2l-3.2 2.1c-.4.3-.7 1-.6 1.5l.6 3.1c.1.5.7.9 1.2.9h16.3c.6 0 1.1-.4 1.3-.9l.6-3.1c.1-.5-.2-1.2-.7-1.5z"></path></svg> Выберiть файл</strong></label>
-                    </div>
+<div class="modal modal-upload" style="display: none">
+    <div class="modal__close modal-close">&times;</div>
+    <div class="modal__header">Надіслати документ</div>
+    <div class="modal__content">
+        <form action="">
+            <div class="u-fields flx-row">
+                <div class="column small-12">
+                <input type="file" name="file-7[]" id="file-7" class="inputfile inputfile-6" data-multiple-caption="{count} files selected" multiple="">
+                <label for="file-7"><span></span> <strong><svg xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17"><path d="M10 0l-5.2 4.9h3.3v5.1h3.8v-5.1h3.3l-5.2-4.9zm9.3 11.5l-3.2-2.1h-2l3.4 2.6h-3.5c-.1 0-.2.1-.2.1l-.8 2.3h-6l-.8-2.2c-.1-.1-.1-.2-.2-.2h-3.6l3.4-2.6h-2l-3.2 2.1c-.4.3-.7 1-.6 1.5l.6 3.1c.1.5.7.9 1.2.9h16.3c.6 0 1.1-.4 1.3-.9l.6-3.1c.1-.5-.2-1.2-.7-1.5z"></path></svg> Выберiть файл</strong></label>
                 </div>
-                <div class="u-fields flx-row">
-                    <label for="messege-short" class="column small-12 u-label u-label-line">
-                        Короткий опис
-                    </label>
-                    <div class="column small-12">
-                        <textarea class="u-textarea" name="messege-short" id="messege-short"></textarea>
-                    </div>
+            </div>
+            <div class="u-fields flx-row">
+                <label for="messege-short" class="column small-12 u-label u-label-line">
+                    Короткий опис
+                </label>
+                <div class="column small-12">
+                    <textarea class="u-textarea" name="messege-short" id="messege-short"></textarea>
                 </div>
-                <p class="modal-hint">
-                    Вся информация должна быть хорошо видна и читаема<br><br>
-                    Разрешенные типы файлов .jpeg, .jpg, .pdf, .png<br><br>
-                    Максимальный объем 1 файла не должен превышать 5 мб.<br>
-                    Максимальный общий объем добавленных файлов не должен превышать 20 мб.
-                </p>
-            </form>
-        </div>
-        <div class="modal__footer">
-            <button class="u-btn secondary modal-close">Вiдмiнити</button>
-            <button class="u-btn primary modal-close">Вiдправити</button>
-        </div>
+            </div>
+            <p class="modal-hint">
+                Вся информация должна быть хорошо видна и читаема<br><br>
+                Разрешенные типы файлов .jpeg, .jpg, .pdf, .png<br><br>
+                Максимальный объем 1 файла не должен превышать 5 мб.<br>
+                Максимальный общий объем добавленных файлов не должен превышать 20 мб.
+            </p>
+        </form>
+    </div>
+    <div class="modal__footer">
+        <button class="u-btn secondary modal-close">Вiдмiнити</button>
+        <button class="u-btn primary modal-close">Вiдправити</button>
     </div>
 </div>
+<div class="modal-bacckdrop " style="display: none"></div>
