--- a/css/new/modal.css
+++ b/css/new/modal.css
@@ -6,16 +6,16 @@
     right: 0;
     bottom: 0;
     background: rgba(0,0,0,.3);
-    z-index: 10;
+    z-index: 100;
 }
 
 .modal {
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     background: #fff;
-    z-index: 200;
+    z-index: 100;
     transition: top .3s ease-out;
     animation: ModalFadein 300ms;
     min-width: 50%;
@@ -49,7 +49,7 @@
         color: #666;
         top: 10px;
         right: 15px;
-        z-index: 11;
+        z-index: 101;
      }
 }
 
@@ -64,9 +64,18 @@
     to {top: 50%;}
 }
 
+@media only screen
+  and (min-device-width: 768px)
+  and (max-device-width: 1024px) {
+  .modal { min-width: 75%; }
+}
+
 /*Ipad and mobile*/
-@media only screen and (max-width: 800px) and (min-width: 320px) {
+@media only screen and (max-width: 767px) and (min-width: 320px) {
   .modal {
     min-width: 90%;
+    top: 20px;
+    transform: translate(-50%, 0);
+    position: absolute;
   }
 }
