--- a/css/split/modal.css
+++ b/css/split/modal.css
@@ -6,17 +6,17 @@
     right: 0;
     bottom: 0;
     background: rgba(0, 0, 0, .3);
-    z-index: 10;
+    z-index: 100;
 }
 
 .modal {
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     -webkit-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
     background: #fff;
-    z-index: 200;
+    z-index: 100;
     transition: top .3s ease-out;
     -webkit-animation: ModalFadein 300ms;
             animation: ModalFadein 300ms;
@@ -53,7 +53,7 @@
     color: #666;
     top: 10px;
     right: 15px;
-    z-index: 11;
+    z-index: 101;
 }
 
 .modal-hint {
@@ -73,9 +73,19 @@
     to {top: 50%;}
 }
 
+@media only screen
+  and (min-device-width: 768px)
+  and (max-device-width: 1024px) {
+  .modal { min-width: 75%; }
+}
+
 /*Ipad and mobile*/
-@media only screen and (max-width: 800px) and (min-width: 320px) {
+@media only screen and (max-width: 767px) and (min-width: 320px) {
   .modal {
     min-width: 90%;
+    top: 20px;
+    -webkit-transform: translate(-50%, 0);
+            transform: translate(-50%, 0);
+    position: absolute;
   }
 }
